# winbolo

./: .gitignore
winbolo/src/bolo/: backend.c  bases.h  bolo_map.c  bolo_map.h  log.c  network.c  tank.c  tank.h
winbolo/src/gui/: dialogWinbolonet.h  dialogskins.h
winbolo/src/gui/linux/: Makefile  brainshandler.c  dialogabout.c  dialogalliance.c  dialoggamefinder.c  dialoggameinfo.c  dialoggamesetup.c  dialogkeysetup.c  dialogmessages.c  dialognetworkinfo.c  dialogopening.c  dialogpassword.c  dialogsetname.c  dialogsysteminfo.c  dialogtrackersetup.c  dialogudpsetup.c  dialogwinbolonet.c  interface.c  linbolo  main.c  main_gtk3.c  messagebox.c  netclient.c
winbolo/src/gui/win32/: CMakeLists.txt  README.md  dialogUDPSetup.c  gamefront.c  netclient.c  winbolo.c
winbolo/src/logviewer/: main.c
winbolo/src/lzw/: dcodlzw.h
winbolo/src/server/: servercore.c  servercore.h  servermain.c  servermessages.c  servernet.c  servernet.h  servertransport.c  servertransport.h
